01_The_Basics_and_Inputs_Movement

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/_Main/Maps/00_First_DemoMap.00_First_DemoMap
 EditorStartupMap=/Game/_Main/Maps/00_First_DemoMap.00_First_DemoMap
+GlobalDefaultGameMode=/Game/_Main/GM_GameModePlay1.GM_GameModePlay1_C
+GameInstanceClass=/Game/_Main/GI_GameInstance1.GI_GameInstance1_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=1
