02_Character_with_Camera_and_HUD(Character_not_included)

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ Backup
 Build
 Plugins
 
+Content/LevelPrototyping/**
+Content/Characters/**
+Content/Input/**
+Content/ThirdPerson/**
+
 .idea
 .vscode
 .vs
