04_Show_PickupWeaponText_In_WidgetHud_when_Overlap_WeaponPickup

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Content/LevelPrototyping/**
 Content/Characters/**
 Content/Input/**
 Content/ThirdPerson/**
+Content/FPS_Weapon_Bundle/**
 
 .idea
 .vscode
