10_Destructible_Objects_Cube_and_Fracture

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ Content/Characters/**
 Content/Input/**
 Content/ThirdPerson/**
 Content/FPS_Weapon_Bundle/**
+Content/FXVarietyPack/**
+Content/StarterContent/**
 
 .idea
 .vscode
