--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -290,3 +290,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
